Fix scalate test stability, possible NPE

--- a/micro-scalate/src/test/resources/WEB-INF/views/urlGenerationWithParams.jade
+++ b/micro-scalate/src/test/resources/WEB-INF/views/urlGenerationWithParams.jade
@@ -1,1 +1,1 @@
-=url(urlGenerationWithParams, "a" -> "jedi", "b" -> "sith")
+=url(_root_.example.scalate.ScalateFuturesSupportServlet.urlGenerationWithParams, "a" -> "jedi", "b" -> "sith")
