Update reverse-route tests

--- a/micro-scalate/src/test/resources/WEB-INF/views/urlGeneration.jade
+++ b/micro-scalate/src/test/resources/WEB-INF/views/urlGeneration.jade
@@ -1,1 +1,2 @@
-=url(_root_.example.scalate.ScalateFuturesSupportServlet.urlGeneration)
+-@val route: skinny.micro.routing.Route = _root_.example.scalate.ScalateFuturesSupportServlet.urlGeneration
+=url(route)
