--- a/micro-scalate/src/test/resources/WEB-INF/views/urlGenerationWithParams.jade
+++ b/micro-scalate/src/test/resources/WEB-INF/views/urlGenerationWithParams.jade
@@ -1,1 +1,2 @@
-=url(_root_.example.scalate.ScalateFuturesSupportServlet.urlGenerationWithParams, "a" -> "jedi", "b" -> "sith")
+-@val route: skinny.micro.routing.Route = _root_.example.scalate.ScalateFuturesSupportServlet.urlGenerationWithParams
+=url(route, "a" -> "jedi", "b" -> "sith")
